[package]
name = "chessrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-builder = "0.2.0"
coz = "0.1"
anyhow = "1.0.68"
pprof = { version = "0.11.0", features = ["protobuf-codec", "flamegraph", "cpp"]}
protobuf = { version = "2.0", optional = true }
[profile.release]
debug = 1
